[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/playerShip1_green.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlayerShip.gd" type="Script" id=2]
[ext_resource path="res://scenes/ShipThruster.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sfx/player_laser.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/health_pickup.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/player_on_hit.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/double_shoot_pickup.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.9083, 19.2177 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.0148148, 0.481481, 1 )
colors = PoolColorArray( 0.494118, 0.709804, 0.721569, 1, 0.439216, 0.756863, 0.827451, 0.556863, 0.670588, 0.964706, 0.92549, 0.0745098 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 1.4, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 2, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 60.0
angular_velocity = 350.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 25.0
angle = 45.0
scale = 1.8
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[node name="PlayerShip" type="Area2D" groups=[
"camera_shaker",
"player",
]]
collision_mask = 28
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
shoot_timer = 0.5

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Cannons" type="Node2D" parent="."]

[node name="Left" type="Position2D" parent="Cannons"]
position = Vector2( -13.0957, -2.46459 )

[node name="Right" type="Position2D" parent="Cannons"]
position = Vector2( 11.8335, -2.46459 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ShipThruster" parent="." instance=ExtResource( 3 )]
position = Vector2( -7.62939e-006, 27.6114 )
z_index = -1

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 0, 18.7595 )
z_index = -1
amount = 80
lifetime = 0.54
visibility_rect = Rect2( -64.73, -68.18, 125.55, 100 )
process_material = SubResource( 6 )

[node name="DoubleshootTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Audio" type="Node" parent="."]

[node name="Laser" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )
volume_db = -3.0

[node name="OnHit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )

[node name="HealthPickup" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="DoubleShootPickup" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
[connection signal="area_entered" from="." to="." method="_on_PlayerShip_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="DoubleshootTimer" to="." method="_on_DoubleshootTimer_timeout"]
